--- a/ERPWeb/Views/AgroConfiguration/DealarLadger.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DealarLadger.cshtml
@@ -14,7 +14,7 @@
                     <div class="px-2 py-1">
                         <div class="row">
                             <div class="col-md-2">
-                                <h5 class="text-center text-bold text-white">Dealer Ladger</h5>
+                                <h7 class="text-center text-bold text-white">Dealer Ladger</h7>
                             </div>
                             <div class="col-md-2">
                                 @*<label for="ddlstokiestname">Stockiest Name </label>*@
@@ -23,17 +23,13 @@
                             <div class="col-md-2">
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker" id="dptFromDate" placeholder="From Date" />
-                                    <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
-                                    </div>
+
                                 </div>
                             </div>
                             <div class="col-md-2">
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker" id="dptToDate" placeholder="To Date" />
-                                    <div class="input-group-prepend remove-date dptToDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
-                                    </div>
+
                                 </div>
                             </div>
 
@@ -47,10 +43,10 @@
 
         </div>
 
-        <div class="row">
+        <div class="row small">
             <div class="col-md-12" style="margin-top:-14px">
                 <div class="card" style="background-color: #E0FFFF;">
-                    <div class="px-4 py-2" style="margin-bottom:-10px">
+                    <div class="px-4 py-1" style="margin-bottom:-10px">
 
                         <div class="row">
                             <div class="col-md-6">
@@ -86,24 +82,17 @@
 
 
         <div class="row mb-5">
-            <div class="col-md-12" style="margin-top:-10px">
+            <div class="col-md-12" style="margin-top:-4px">
                 @*<div class="card">
                     <div class="card-body">*@
 
                 <div class="row" style="margin-top:-3px">
                     <div class="col-md-12" style="margin-top:-10px">
-                        <div class="card">
-                            <div class="card-body" style="margin-top:-10px">
 
-                                <div class="col-md-12" id="dataContainer">
+
+                                <div class="col-md-12 p-0" id="dataContainer">
 
                                 </div>
-                                @*</div>
-                                    </div>*@
-                            </div>
-                        </div>
-
-
 
 
                     </div>
