--- a/ERPWeb/Views/AgroConfiguration/GetSalesReturnAdjustList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetSalesReturnAdjustList.cshtml
@@ -4,17 +4,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:-10px">
+<div class="row" style="margin-top:-13px">
     <div class="col-md-12">
 
         <div class="row" style="margin-top:-12px">
             <div class="col-md-12">
                 <div class="card" style="background-color:#001f3f">
                     <div class="px-2 py-1">
-                        <div class="row">
+                        <div class="row align-items-center">
 
                             <div class="col-md-3">
-                                <h5 class="float-left text-bold text-white">Sales Return Adjust List</h5>
+                                <h7 class="float-left text-bold text-white">Sales Return Adjust List</h7>
                             </div>
                             <div class="col-md-2">
 
@@ -27,7 +27,7 @@
 
                             </div>
                             <div class="col-md-3">
-                                <a href="/AgroConfiguration/SalesReturnAdjustCreate" class="btn btn-outline-warning btn-sm float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New SalesReturnAdjust</a>
+                                <a href="/AgroConfiguration/SalesReturnAdjustCreate" class="das2-btn float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New SalesReturnAdjust</a>
                             </div>
                         </div>
                     </div>
@@ -37,21 +37,15 @@
 
         </div>
 
-        <div class="row" style="margin-top:-15px">
-            <div class="col-md-12">
-                <div class="card card-gray-dark">
-                    
-                </div>
-            </div>
+        <div class="row" style="margin-top:-16px">
 
-            <div class="col-md-12" style="margin-top:-13px">
-                <div class="card">
-                    <div class="card-body"style="margin-top:-10px">
-                        <div class="col-md-12" id="dataContainer">
+
+            <div class="col-md-12">
+
+                        <div class="col-md-12 p-0" id="dataContainer">
 
                         </div>
-                    </div>
-                </div>
+
             </div>
 
         </div>
