--- a/ERPWeb/Views/AgroConfiguration/ProductPriceList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductPriceList.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<div class="row" style="margin-top:-10px">
+<div class="row" style="margin-top:-12px">
     <div class="col-md-12">
 
 
@@ -12,11 +12,11 @@
             <div class="col-md-12">
                 <div class="card" style="background-color:#001f3f">
                     <div class="px-2 py-1" style="text-align: center;">
-                        <div class="row">
+                        <div class="row align-content-center">
                             <div class="col-md-2">
-                                <h5 class="text-bold float-left text-white">
+                                <h7 class="text-bold float-left text-white">
                                     Product Price List
-                                </h5>
+                                </h7>
                             </div>
                             <div class="col-md-3">
 
@@ -29,7 +29,7 @@
 
                             </div>
                             <div class="col-md-3">
-                                <a href="/AgroConfiguration/CreateProductPrice" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i>Create ProductPrice</a>
+                                <a href="/AgroConfiguration/CreateProductPrice" class="das2-btn float-lg-right float-sm-right" id="btnAddNew"><i class="fa fa-plus"></i>Create ProductPrice</a>
                             </div>
                         </div>
                     </div>
@@ -39,15 +39,13 @@
 
 
 
-        <div class="row" style="margin-top:-3px">
+        <div class="row" style="margin-top:-7px">
             <div class="col-md-12" style="margin-top:-10px">
-                <div class="card ">
-                    <div class="card-body"style="margin-top:-10px">
-                        <div class="col-md-12" id="dataContainer">
+
+                        <div class="col-md-12 p-0" id="dataContainer">
 
                         </div>
-                    </div>
-                </div>
+
             </div>
         </div>
 
