--- a/ERPWeb/Views/AgroConfiguration/SalesCommission.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesCommission.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "SalesCommision";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="row"  style="margin-top:-10px">
+<div class="row"  style="margin-top:-13px">
     <div class="col-md-12">
 
         <div class="row" style="margin-top:-12px">
@@ -12,9 +12,9 @@
                         <div class="row">
 
                             <div class="col-md-3">
-                                <h5 class=" text-bold float-left text-white">
+                                <h7 class=" text-bold float-left text-white">
                                     Sales Commission
-                                </h5>
+                                </h7>
                             </div>
                             <div class="col-md-2" style="margin-left:-40px">
                                 @*<label class="control-label" for="ddlProductName">Product Name</label>*@
@@ -31,18 +31,14 @@
 
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" placeholder="From Date" />
-                                    <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
-                                    </div>
+
                                 </div>
                             </div>
                             <div class="col-md-2">
 
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" placeholder="To Date" />
-                                    <div class="input-group-prepend remove-date dptToDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
-                                    </div>
+
                                 </div>
 
                             </div>
@@ -63,25 +59,16 @@
                 </div>
             </div>
         </div>
-        @*<div class="row" style="margin-top:-15px">
-            <div class="col-md-12">
-                <div class="card card-gray-dark">
-                    
-                </div>
 
-            </div>
-        </div>*@
-        <div class="row"style="margin-top:-3px">
-            <div class="col-md-12" style="margin-top:-10px">
-                <div class="card ">
-                    <div class="card-body"style="margin-top:-10px">
+        <div class="row"style="margin-top:-17px">
+            <div class="col-md-12">
+
                         <div class="row">
-                            <div class="col-md-12 text-sm text-sm" id="dataContainer" style="overflow-y:scroll">
+                            <div class="col-md-12 text-sm text-sm p-0" id="dataContainer" >
 
                             </div>
                         </div>
-                    </div>
-                </div>
+
             </div>
         </div>
 
