--- a/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<div class="row" style="margin-top:-10px">
+<div class="row" style="margin-top:-12px">
     <div class="col-md-12">
 
 
@@ -12,12 +12,12 @@
             <div class="col-md-12">
                 <div class="card" style="background-color:#001f3f">
                     <div class="px-2 py-1" style="text-align: center;">
-                        <div class="row">
+                        <div class="row align-items-center">
 
                             <div class="col-md-2">
-                                <h5 class="float-left text-bold text-white">
+                                <h7 class="float-left text-bold text-white">
                                     Product Return List
-                                </h5>
+                                </h7>
                             </div>
 
                             <div class="col-md-2">
@@ -41,7 +41,7 @@
 
                             </div>
                             <div class="col-md-3">
-                                <a href="/AgroConfiguration/SalesReturn" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i>Create ProductReturn</a>
+                                <a href="/AgroConfiguration/SalesReturn" class="das2-btn float-lg-right float-sm-right" id="btnAddNew"><i class="fa fa-plus"></i>Create ProductReturn</a>
                             </div>
                         </div>
                     </div>
@@ -51,22 +51,14 @@
 
 
 
-        @*<div class="row" style="margin-top:-15px">
-            <div class="col-md-12">
-                <div class="card card-gray-dark">
-                   
-                </div>
-            </div>
-        </div>*@
-        <div class="row"style="margin-top:-3px">
+
+        <div class="row"style="margin-top:-6px">
             <div class="col-md-12" style="margin-top:-11px">
-                <div class="card ">
-                    <div class="card-body"style="margin-top:-10px">
+
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
-                    </div>
-                </div>
+
             </div>
         </div>
 
