--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
@@ -6,7 +6,7 @@
     var info = (ERPBO.Agriculture.ViewModels.AgroProductSalesInfoViewModel)ViewBag.Info;
 }
 
-<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm">
+<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm mb-0">
     @if (info != null)
     {
         <tr  style="background-color: #008B8B;">
