--- a/ERPWeb/Views/AgroConfiguration/_GetSalesReturnAdjustListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetSalesReturnAdjustListview.cshtml
@@ -6,7 +6,7 @@
     var SL = 0;
 }
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12">
         <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblretunrData">
             <thead class="btn-dark">
                 <tr class="text-center">
@@ -34,7 +34,7 @@
                         <td class="text-center">@item.StockiestName</td>
                 
                         <td class="text-center">
-                            <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail" title="View Detail" data-item-detail="@item.ProductSalesInfoId" style="line-height:1">
+                            <a href="#" class="emndetails-btn data-item-detail" title="View Detail" data-item-detail="@item.ProductSalesInfoId" style="line-height:1">
                                 <i class="fas fa-eye"></i>
                             </a>
                         </td>
