--- a/ERPWeb/Views/AgroConfiguration/CreateProductPrice.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateProductPrice.cshtml
@@ -4,26 +4,29 @@
 }
 
 
-<div class="row" style="margin-top:-25px;">
+<div class="row" style="margin-top:-10px;">
     <div class="col-md-12">
 
+        <div class="row" style="margin-top:-15px">
+            <div class="col-md-12">
+                <div class="card mb-0" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
 
-        <div class="card card-navy">
-            <div class="card-header" style="text-align: center;">
-
-                <div class="row" @*style="margin-bottom:-7px"*@>
-                    <div class="col-md-3">
-                        <a href="/AgroConfiguration/ProductPriceList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
-                            <i class="fas fa-arrow-alt-circle-left"></i>
-                        </a>
-                    </div>
-                    <div class="col-md-6">
-                        <h5 class="text-center text-bold">
-                            Product Price Configure
-                        </h5>
-                    </div>
-                    <div class="col-md-3">
-                        <button class="btn btn-success btn-sm btn float-right" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <a href="/AgroConfiguration/ProductPriceList" class="float-left emnDrop-btn" title="Go To List">
+                                    <i class="fas fa-arrow-alt-circle-left"></i>
+                                </a>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <h7 class="text-bold text-white">
+                                    Product Price Configure
+                                </h7>
+                            </div>
+                            <div class="col-md-3">
+                                <button type="submit" class="emnsave-btn" id="saveButton" title="Save"><i class="fas fa-paper-plane"></i>Save</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -31,47 +34,49 @@
 
 
 
+
+
         <div class="card-body text-sm">
             <div class="row " style="margin-top:-18px;">
 
                 <div class="col-md-2">
-                    <label for="ddlProductName" class="control-label">Product Name<span style="color:red">*</span></label>
-                    @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "Select Product", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger",autofocus="autofocus" })
+                    <label for="ddlProductName" class="control-label mb-0">Product Name<span style="color:red">*</span></label>
+                    @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "Select Product", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger", autofocus = "autofocus" })
                     <span class="error hide required-ddlProductName font-weight-bold">Select Area Name!</span>
                     <span class="error hide duplicate-ddlProductName font-weight-bold">Already Area Exist!</span>
                 </div>
 
 
                 <div class="col-md-2">
-                    <label for="ddlQtyUnit" class="control-label">UnitQTY<span style="color:red">*</span></label>
+                    <label for="ddlQtyUnit" class="control-label mb-0">UnitQTY<span style="color:red">*</span></label>
                     @Html.DropDownList("ddlQtyUnit", (IEnumerable<SelectListItem>)ViewBag.ddlQtyUnit, "--UnitQty--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                     <span class="error hide req-QtyUnit font-weight-bold">Unit Qty is required!</span>
                 </div>
                 <div class="col-md-2">
-                    <label for="ddlRMtotalprice" class="control-label">ProductionCost/PC</label>
+                    <label for="ddlRMtotalprice" class="control-label mb-0">ProductionCost/PC</label>
                     <input type="number" id="ddlRMtotalprice" name="ddlRMtotalprice" class="form-control form-control-sm" readonly />
                     <span class="error hide required-ddlRMtotalprice font-weight-bold">Input Product Price!</span>
                 </div>
 
                 <div class="col-md-2">
-                    <label for="ddlprice" class="control-label">Price/PC  <span style="color:red">*</span></label>
+                    <label for="ddlprice" class="control-label mb-0">Price/PC  <span style="color:red">*</span></label>
                     <input type="number" id="ddlprice" class="form-control form-control-sm" />
                     <span class="error hide required-ddlprice font-weight-bold">Input Product Price!</span>
 
                 </div>
 
                 <div class="col-md-1">
-                    <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
+                    <label for="" class="control-label font-weight-bold mb-0" style="visibility:hidden">Add</label>
                     <div class="clearfix">
-                        <button type="submit" class="btn btn-sm float-left btn-outline-success" id="addButton"><i class="fas fa-plus"></i></button>
+                        <button type="submit" class="float-left float-md-start text-bold" id="addButton"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
 
 
             </div>
-     </div>
+        </div>
 
-        <div class="row" style="margin-top:8px;">
+        <div class="row" style="margin-top:-5px;">
             <div class="col-md-12">
                 <table class="table table-bordered table-striped table-sm text-sm table-responsive-lg" id="tblMargeItems">
                     <thead>
@@ -80,12 +85,12 @@
                         <tr class="text-center btn-dark">
                             <th style="width:5%">#SL</th>
                             <th class="text-center">Product Name</th>
-                            <th class="text-center" >Details</th>
+                            <th class="text-center">Details</th>
                             <th class="text-center">UnitPrice</th>
                             <th class="text-center">Action</th>
                             <th class="hide">ProductID</th>
                             <th class="hide">RecID</th>
-         
+
 
 
                         </tr>
@@ -194,7 +199,7 @@
                  //var td7 = "<td class='text-center DiscountIDCell'>" + txtQuanity.val() * txtPrice.val() / txtDiscount.val() + "</td>";
                     var td6 = "<td class='hide ddlQtyUnit'>" + ddlQtyUnit.val() + "</td>";
 
-                    var td7 = "<td class='text-center'><a href='#' class='btn btn-sm btn-danger data-onfly-del'><i class='far fa-trash-alt'></i>Remove</a></td>";
+                var td7 = "<td class='text-center'><a href='#' class='emn-btn data-onfly-del'><i class='far fa-trash-alt'></i></a></td>";
 
 
 
