--- a/ERPWeb/Views/AgroConfiguration/GetPackageList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPackageList.cshtml
@@ -4,17 +4,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:-10px">
+<div class="row" style="margin-top:-12px">
     <div class="col-md-12">
 
         <div class="row" style="margin-top:-12px">
             <div class="col-md-12">
                 <div class="card" style="background-color:#001f3f">
                     <div class="px-2 py-1">
-                        <div class="row">
+                        <div class="row align-items-center">
 
                             <div class="col-md-2">
-                                <h5 class="float-left text-bold text-white">Package List</h5>
+                                <h7 class="float-left text-bold text-white">Package List</h7>
                             </div>
 
 
@@ -29,22 +29,18 @@
 
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" placeholder="Start Date" />
-                                    <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
-                                    </div>
+
                                 </div>
                             </div>
                             <div class="col-md-2">
 
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" placeholder="End Date" />
-                                    <div class="input-group-prepend remove-date dptToDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
-                                    </div>
+
                                 </div>
                             </div>
                             <div class="col-md-2">
-                                <a href="/AgroConfiguration/PackageCreate" class="btn btn-outline-warning btn-sm float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New Package</a>
+                                <a href="/AgroConfiguration/PackageCreate" class="das2-btn float-lg-right float-sm-right" id="createButton"><i class="fa fa-plus"></i> Create New Package</a>
                             </div>
                         </div>
                     </div>
@@ -54,21 +50,14 @@
 
         </div>
 
-        <div class="row" style="margin-top:-15px">
+        <div class="row" style="margin-top:-16px">
+
             <div class="col-md-12">
-                <div class="card card-gray-dark">
 
-                </div>
-            </div>
-
-            <div class="col-md-12" style="margin-top:-13px">
-                <div class="card">
-                    <div class="card-body" style="margin-top:-10px">
-                        <div class="col-md-12" id="dataContainer">
+                        <div class="col-md-12 p-0" id="dataContainer">
 
                         </div>
-                    </div>
-                </div>
+
             </div>
 
         </div>
