--- a/ERPWeb/Views/AgroConfiguration/_GetMoneyReceiptListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetMoneyReceiptListview.cshtml
@@ -7,7 +7,7 @@
     var SL = 0;
 }
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12">
         <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblMoneyReceipt">
             <thead class="btn-dark">
                 <tr class="text-center">
@@ -42,7 +42,7 @@
                         <td class="text-center">@item.EntryDate.Value.ToString("dd-MMM-yyyy")</td>
 
                         <td class="text-center">
-                            <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail" title="View Detail" data-item-detail="@item.PaymentMoneyReciptId" style="line-height:1">
+                            <a href="#" class="emndetails-btn data-item-detail" title="View Detail" data-item-detail="@item.PaymentMoneyReciptId" style="line-height:1">
                                 <i class="fas fa-eye"></i>
                             </a>
                         </td>
