--- a/ERPWeb/Views/AgroConfiguration/_GetPackageListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetPackageListview.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12">
         <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblPackageList">
             <thead class="btn-dark">
                 <tr class="text-center">
@@ -37,7 +37,7 @@
                             <td class="text-center">@item.StartDate.Value.ToString("dd-MMM-yyy")</td>
                             <td class="text-center">@item.EndDate.Value.ToString("dd-MMM-yyyy")</td>
                             <td class="text-center">
-                                <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail-PackageId" title="View Details" data-item-detail-PackageId="@item.PackageId" style="line-height:1"><i class="fas fa-eye"></i></a>
+                                <a href="#" class="emndetails-btn data-item-detail-PackageId" title="View Details" data-item-detail-PackageId="@item.PackageId" style="line-height:1"><i class="fas fa-eye"></i></a>
 
                             </td>
                         </tr>
@@ -54,7 +54,7 @@
                             <td class="text-center">@item.StartDate.Value.ToString("dd-MMM-yyy")</td>
                             <td class="text-center">@item.EndDate.Value.ToString("dd-MMM-yyyy")</td>
                             <td class="text-center">
-                                <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail-PackageId" title="View Details" data-item-detail-PackageId="@item.PackageId" style="line-height:1"><i class="fas fa-eye"></i></a>
+                                <a href="#" class="emndetails-btn data-item-detail-PackageId" title="View Details" data-item-detail-PackageId="@item.PackageId" style="line-height:1"><i class="fas fa-eye"></i></a>
 
                             </td>
                         </tr>
