--- a/ERPWeb/Views/AgroConfiguration/_ProductPriceListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_ProductPriceListview.cshtml
@@ -5,7 +5,7 @@
     var SL = 0;
 }
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12">
         <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblDepotData">
             <thead class="btn-dark">
                 <tr class="text-center">
@@ -35,8 +35,8 @@
                         <td class="text-center">@item.Flag</td>
                         <td class="text-center">@item.ProductPrice</td>
                         <td class="text-center">
-                            <a href="#" class="btn btn-warning btn-sm data-edit-item-price" style="line-height:1" data-edit-item-price="@item.FinishGoodProductId"><i class="fa fa-pen"></i></a>
-                            <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail" title="View Detail" data-item-detail="@item.FinishGoodProductId" style="line-height:1">
+                            <a href="#" class="das-btn btn-sm data-edit-item-price" style="line-height:1" data-edit-item-price="@item.FinishGoodProductId"><i class="fa fa-pen"></i></a>
+                            <a href="#" class="emndetails-btn data-item-detail" title="View Detail" data-item-detail="@item.FinishGoodProductId" style="line-height:1">
                                 <i class="fas fa-eye"></i>
                             </a>
                         </td>
